# cvpr-visual-search

./: .env  .gitignore  README.md  data_exploration.ipynb  evaluation_results.csv  ground_truth_labels.csv  pyproject.toml
Skeleton_Python/: cvpr_computedescriptors.py  cvpr_visualsearch.py
descriptors/globalRGBhisto/: 10_10_s.mat  10_11_s.mat  10_12_s.mat  10_13_s.mat  10_14_s.mat  10_15_s.mat  10_16_s.mat  10_17_s.mat  10_18_s.mat  10_19_s.mat  10_1_s.mat  10_20_s.mat  10_21_s.mat  10_22_s.mat  10_23_s.mat  10_24_s.mat  10_25_s.mat  10_26_s.mat  10_27_s.mat  10_28_s.mat  10_29_s.mat  10_2_s.mat  10_30_s.mat  10_31_s.mat  10_32_s.mat  10_3_s.mat  10_4_s.mat  10_5_s.mat  10_6_s.mat  10_7_s.mat  10_8_s.mat  10_9_s.mat  11_10_s.mat  11_11_s.mat  11_12_s.mat  11_13_s.mat  11_14_s.mat  11_15_s.mat  11_16_s.mat  11_17_s.mat  (+551 more)
notebooks/: data_exploration.ipynb  detailed_precision_recall_analysis.ipynb
results/: ap_map_stats_baseline_RGBhisto.csv  map_stats_globalRGBhisto_Q4.csv  per_query_ap_globalRGBhisto_Q4.csv  precision_recall_stats_baseline_RGBhisto.csv  precision_recall_stats_globalRGBhisto_Q4.csv
results/baseline_colorDescriptor/: map_stats_baseline_colorDescriptor.csv  per_query_ap_baseline_colorDescriptor.csv  precision_recall_stats_baseline_colorDescriptor.csv
results/globalRGBhisto_Q10/: map_stats_globalRGBhisto_Q10.csv  per_query_ap_globalRGBhisto_Q10.csv  precision_recall_stats_globalRGBhisto_Q10.csv
results/globalRGBhisto_Q100/: map_stats_globalRGBhisto_Q100.csv  per_query_ap_globalRGBhisto_Q100.csv  precision_recall_stats_globalRGBhisto_Q100.csv
results/globalRGBhisto_Q12/: map_stats_globalRGBhisto_Q12.csv  per_query_ap_globalRGBhisto_Q12.csv  precision_recall_stats_globalRGBhisto_Q12.csv
src/: cvpr_compare.py  cvpr_computedescriptors.py  cvpr_visualsearch.py  eval_visualsearch.py  evals.py  extractColorDescriptor.py  extractGlobalColorHisto.py  image_handling.py
(+12 files in other folders)
