[project]
name = "cvpr-visual-search"
version = "0.1.0"
description = "program to run visual search on a collection of images"
authors = [
    {name = "jackiemalooly",email = "jackie.malooly@renaissance.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "scipy (>=1.16.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
