[project]
name = "cvpr-visual-search"
version = "0.1.0"
description = "program to run visual search on a collection of images"
authors = [
    {name = "jackiemalooly",email = "jackie.malooly@renaissance.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2,<2.3.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
